<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"

    android:background="@drawable/background"

    tools:context=".MainActivity"
    android:paddingTop="150dp"
    android:paddingBottom="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"


        android:layout_gravity="center"
        android:orientation="vertical"


        >
        <ImageView
            android:id="@+id/pic_logistics_1"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:contentDescription="@string/ic_logistics"
            android:src="@mipmap/ic_logistics"
            android:scaleType="centerInside"
            />
        <TextView
            android:id="@+id/text_app_title_1"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="40sp"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"

        android:gravity="center"
        android:orientation="vertical"

        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:layout_gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/pic_user_1"
                android:layout_width="50dp"
                android:layout_height="match_parent"

                android:contentDescription="@string/ic_user"
                android:src="@mipmap/ic_user"
                android:scaleType="centerInside"
                />
            <EditText
                android:id="@+id/edit_username_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:hint="@string/hint_username"
                android:autofillHints="@string/autofillHints"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:gravity="start"
                android:inputType="number"

                android:maxLines="1"

                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:layout_gravity="center"
            android:orientation="horizontal"

            android:layout_marginTop="10dp">
            <ImageView
                android:id="@+id/pic_password_1"
                android:layout_width="50dp"
                android:layout_height="match_parent"

                android:contentDescription="@string/ic_password"
                android:src="@mipmap/ic_password"
                android:scaleType="centerInside"
                />
            <EditText
                android:id="@+id/edit_password_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:hint="@string/hint_password"
                android:autofillHints="@string/autofillHints"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:gravity="start"
                android:inputType="textPassword"

                android:maxLines="1"

                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"

        android:gravity="center"
        android:orientation="vertical"

        android:paddingLeft="25dp"
        android:paddingRight="25dp">
        <Button
            android:id="@+id/button_login_1"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:text="@string/button_login"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"

            android:background="@drawable/button_background"

            />

        <Button
            android:id="@+id/button_register_1"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:text="@string/button_register"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"


            android:background="@drawable/button_background"

            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/button_exit_1"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:text="@string/button_exit"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"


            android:background="@drawable/button_background"

            android:layout_marginTop="10dp"
            />

    </LinearLayout>

</LinearLayout>