<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"

    android:background="@drawable/background"

    tools:context=".UserActivity"
    android:paddingTop="0dp"
    android:paddingBottom="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"


        android:layout_gravity="center"
        android:orientation="horizontal"

        >
        <ImageView
            android:id="@+id/pic_logistics_2"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:contentDescription="@string/ic_logistics"
            android:src="@mipmap/ic_logistics"
            android:scaleType="centerInside"
            />
        <TextView
            android:id="@+id/app_title_2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"

            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="40sp"
            android:gravity="start"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="1"

        android:gravity="center"
        android:orientation="vertical"

        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:layout_gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/pic_user_2"
                android:layout_width="50dp"
                android:layout_height="match_parent"

                android:contentDescription="@string/ic_user"
                android:src="@mipmap/ic_user"
                android:scaleType="centerInside"
                />
            <EditText
                android:id="@+id/edit_username_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:autofillHints="@string/autofillHints"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:gravity="start"
                android:inputType="textPersonName"
                android:labelFor="@id/edit_username_2"

                android:maxLines="1"

                android:paddingStart="10dp"
                android:paddingEnd="10dp"

                android:focusable="false"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:layout_gravity="center"
            android:orientation="horizontal"

            android:layout_marginTop="10dp">
            <ImageView
                android:id="@+id/pic_password_2"
                android:layout_width="50dp"
                android:layout_height="match_parent"

                android:contentDescription="@string/ic_password"
                android:src="@mipmap/ic_password"
                android:scaleType="centerInside"
                />
            <EditText
                android:id="@+id/edit_password_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"

                android:autofillHints="@string/autofillHints"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:gravity="start"
                android:inputType="textVisiblePassword"
                android:labelFor="@id/edit_password_2"

                android:maxLines="1"

                android:paddingStart="10dp"
                android:paddingEnd="10dp"

                android:focusable="false"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"

        android:gravity="center"
        android:orientation="vertical"

        android:paddingLeft="25dp"
        android:paddingRight="25dp">
        <Button
            android:id="@+id/button_enter_2"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:text="@string/button_enter"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"

            android:background="@drawable/button_background"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/button_search_local_2"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:text="@string/button_search_local"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"

            android:background="@drawable/button_background"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/button_search_company_xml_2"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:text="@string/button_search_company_xml"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"

            android:background="@drawable/button_background"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/button_search_company_json_2"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:text="@string/button_search_company_json"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"

            android:background="@drawable/button_background"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/button_logout_2"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:text="@string/button_logout"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"

            android:background="@drawable/button_background"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/button_exit_2"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:text="@string/button_exit"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"


            android:background="@drawable/button_background"

            android:layout_marginTop="10dp"
            />

    </LinearLayout>

</LinearLayout>