<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"

    android:background="@drawable/background"

    tools:context=".SearchLocalActivity"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:gravity="center"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/pic_logistics_4"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:contentDescription="@string/ic_logistics"
            android:src="@mipmap/ic_logistics"
            android:scaleType="centerInside"
            />
        <TextView
            android:id="@+id/app_title_4"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"

            android:text="@string/text_search_local_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="40sp"
            android:gravity="start"
            android:paddingStart="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_show_4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        android:orientation="vertical"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view_4"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"

            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <Button
        android:id="@+id/button_back_4"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:text="@string/button_back"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:gravity="center"

        android:background="@drawable/button_background"

        />



</LinearLayout>